[gd_scene load_steps=3 format=3 uid="uid://n2d8bs0rd4te"]

[ext_resource type="Script" path="res://scripts/big_blast.gd" id="1_tbx5w"]
[ext_resource type="Texture2D" uid="uid://c85vievcjqb0t" path="res://sprites/progress_bar.png" id="2_ejada"]

[node name="BigBlast" type="Node2D"]
script = ExtResource("1_tbx5w")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -15.0
offset_top = -48.0
offset_right = 15.0
offset_bottom = 48.0
fill_mode = 3
texture_progress = ExtResource("2_ejada")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 21.0
offset_top = -67.0
offset_right = 61.0
offset_bottom = -27.0
text = "0"

[node name="flash_indicator" type="Sprite2D" parent="."]
modulate = Color(0.415049, 0.168127, 0.558308, 1)
position = Vector2(26, -39)
scale = Vector2(0.433333, 0.28)
texture = ExtResource("2_ejada")

[connection signal="pump" from="." to="." method="_on_pump"]
[connection signal="value_changed" from="TextureProgressBar" to="." method="_on_texture_progress_bar_value_changed"]
